--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -376,8 +376,7 @@ ENDMACRO( ADD_GENFIT_TEST )
 ADD_GENFIT_TEST( fitterTests               test/fitterTests/main.cc)
 ADD_GENFIT_TEST( minimalFittingExample     test/minimalFittingExample/main.cc)
 ADD_GENFIT_TEST( minimalFittingExample2     test/minimalFittingExample/main2.cc)
-ADD_GENFIT_TEST( minimalFittingExampleG4eTrackRep     test/minimalFittingExample/main3.cc)
-ADD_GENFIT_TEST( testRKTrackRep     test/minimalFittingExample/main4.cc)
+
 ADD_GENFIT_TEST( measurementFactoryExample test/measurementFactoryExample/main.cc)
 ADD_GENFIT_TEST( streamerTest              test/streamerTest/main.cc)
 ADD_GENFIT_TEST( unitTests                 test/unitTests/main.cc)
@@ -385,8 +384,9 @@ if(DEFINED RAVE)
   ADD_GENFIT_TEST( vertexingTest           test/vertexingTest/main.cc)
   ADD_GENFIT_TEST( vertexingTestRead       test/vertexingTest/read.cc)
 endif()
-ADD_GENFIT_TEST( testFitter               test/sPHENIX_Test/testFitter.cc)
-ADD_GENFIT_TEST( fitPHG4Hits               test/sPHENIX_Test/fitPHG4Hits.cc)
+ADD_GENFIT_TEST( matEffectTest     			test/sPHENIX_Test/matEffectTest.cc)
+ADD_GENFIT_TEST( zPlaneFitterTest     		test/sPHENIX_Test/zPlaneFitterTest.cc)
+ADD_GENFIT_TEST( fitPHG4Hits               	test/sPHENIX_Test/fitPHG4Hits.cc)
 
 # generate and install following configuration files
 #GENERATE_PACKAGE_CONFIGURATION_FILES( genfitConfig.cmake genfitConfigVersion.cmake )
