--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -308,7 +308,7 @@ SET(library_sources "${CMAKE_CURRENT_BINARY_DIR}/measurementsRootDict.cc" "${lib
 
 SET(TRACKREPS_DICTIONARY_SOURCES
   ${CMAKE_CURRENT_SOURCE_DIR}/trackReps/include/RKTrackRep.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/trackReps/include/G4eTrackRep.h
+  #${CMAKE_CURRENT_SOURCE_DIR}/G4eTrackRep/include/G4eTrackRep.h
 )
 ROOT_GENERATE_DICTIONARY("${CMAKE_SHARED_LIBRARY_PREFIX}${PROJECT_NAME}"
                          "${TRACKREPS_DICTIONARY_SOURCES}"
