modifiy CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,11 +31,11 @@ INCLUDE(macros)
 FIND_PACKAGE(ROOT REQUIRED COMPONENTS Geom)
 
 # ================== Geant4 ========================
-EXECUTE_PROCESS( COMMAND "/home/yuhw/Program/Geant4/geant4.10.01.p02-install/bin/geant4-config" --libs
-    OUTPUT_VARIABLE G4_LIBS
-    RESULT_VARIABLE _exit_code
-    OUTPUT_STRIP_TRAILING_WHITESPACE
-)   
+#EXECUTE_PROCESS( COMMAND "/home/yuhw/Program/Geant4/geant4.10.01.p02-install/bin/geant4-config" --libs
+#    OUTPUT_VARIABLE G4_LIBS
+#    RESULT_VARIABLE _exit_code
+#    OUTPUT_STRIP_TRAILING_WHITESPACE
+#)   
 
 # either, the environment variable RAVEPATH has to be specified, and RAVE's pkgConfig will be used to determine everything we need
 # or, RAVE_LDFLAGS, RAVE_INCLUDE_DIRS and RAVE_CFLAGS have to be set via the command-line
@@ -145,7 +145,7 @@ SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS} -O3 -g3")
 INCLUDE_DIRECTORIES( 
 	BEFORE 
 	${GF_INC_DIRS}
-	$ENV{G4INSTALL}/include/Geant4/
+#	$ENV{G4INSTALL}/include/Geant4/
 	${ROOT_INCLUDE_DIRS})
 
 
